syntax = "proto2";

package com.maple.game.osee.proto;

message RoomPlayerInfoProto {
    optional int64 playerId = 1; // 玩家id
    optional string nickname = 2; // 昵称
    optional string headUrl = 3; // 头像链接
    optional int64 money = 4; // 金币数量
    optional int64 role = 5; // 角色0-未上庄闲家，1-庄家,2-等待上庄

}

message CardInfoProto {
    optional int32 betType = 1; //方位类型 0-顺，1-天，2-地,3-庄
    optional int32 carda = 2; //第一张牌
    optional int32 cardb = 3; //第二张牌
    optional int32 scoreType = 4; //1-9 分别表示点数 10 表示二八 11表示豹子 12-一点半 13-二点半 14-三点半。。。20-九点半
}

message WinInfoProto {
    optional int32 type = 1; //0-顺，1-天，2-地
    optional int32 winLose = 2; //0-赢，1-输
}

message WinHistoryInfoProto {
    optional int32 type = 1; //0-顺，1-天，2-地
    repeated int32 winLoseHistory = 2; //0-赢，1-输 输赢列表
}

message BetInfo {
    optional int32 betType = 1; //0-顺，1-天，2-地
    optional int64 betNum = 2; //下注金额
}